# ContextBuddy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bench-report.json  pyproject.toml
.cursor/plans/: context_middleware_mvp_e6a61cdd.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pypi.yml  workflow.yml
benchmarks/: README.md
benchmarks/datasets/: v0.sample.json
docs/: architecture.md  commands.md  demo.md  index.md  validation.md
docs/benchmarks/: benchmarks.md
docs/reference/: FAQ.md  architecture.md  cache.md  chunking.md  cli.md  embedders.md  engine.md  loaders.md  mcp.md  pipeline.md  retriever.md  router.md  scoring.md  store.md  tools.md
docs/user-guide/: user-guide.md
examples/: agentic_pipeline.py  async_usage.py  cli_demo.sh  openai_raw.py  wrap_openai_chat.py
scripts/: release_check.ps1  release_check.sh  run_mcp_stdio.py  smoke_test.ps1  smoke_test.sh
src/contextbuddy/: __init__.py  __main__.py  benchmarks.py  budget.py  cache.py  chunking.py  cli.py  embedder.py  engine.py  entities.py  hybrid_scorer.py  langchain.py  pipeline.py  pricing.py  retriever.py  router.py  scoring.py  stemmer.py  synonyms.py  telemetry.py  tokenizer.py  tools.py  types.py  wrappers.py
src/contextbuddy/index/: __init__.py  codegraph.py  graph.py  vector.py
src/contextbuddy/loaders/: __init__.py  directory.py  docx.py  pdf.py  text.py  web.py
src/contextbuddy/mcp/: __init__.py  __main__.py  kb.py  policy.py  security.py  server.py
src/contextbuddy/store/: __init__.py  memory.py  persistent.py
tests/: conftest.py  test_benchmarks_gate.py  test_budget.py  test_cache.py  test_chunking.py  test_cli.py  test_code_chunking.py  test_codegraph_optional.py  test_compression_stream.py  test_embedders_optional.py  test_engine.py  test_entities.py  test_hybrid_scorer.py  test_langchain.py  test_loaders.py  test_mcp_graph.py  test_mcp_kb.py  test_mcp_policy.py  test_mcp_security.py  test_mcp_vector.py  test_pipeline.py  test_playbook_process.py  test_pricing.py  test_redlines.py  test_retriever.py  test_router.py  test_rrf_fuse.py  test_scoring.py  test_smart_chunking_legal.py  test_stemmer.py  test_store.py  test_synonyms.py  test_telemetry.py  test_tokenizer.py  test_tools.py
