[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextbuddy"
version = "0.2.0"
description = "From raw PDFs to compressed prompts in 3 lines. Cut your LLM bill by 60%."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ContextBuddy contributors" }]
keywords = ["llm", "prompt", "context", "compression", "routing", "tokens", "cost", "rag", "pdf", "vector-store"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
contextbuddy = "contextbuddy.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
tiktoken = ["tiktoken>=0.6.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
pdf = ["pymupdf>=1.24.0"]
web = ["httpx>=0.27.0", "beautifulsoup4>=4.12.0"]
docx = ["python-docx>=1.1.0"]
loaders = ["pymupdf>=1.24.0", "httpx>=0.27.0", "beautifulsoup4>=4.12.0", "python-docx>=1.1.0"]
all = ["tiktoken>=0.6.0", "openai>=1.0.0", "anthropic>=0.30.0", "pymupdf>=1.24.0", "httpx>=0.27.0", "beautifulsoup4>=4.12.0", "python-docx>=1.1.0"]

[project.urls]
Homepage = "https://github.com/yourname/contextbuddy"
Repository = "https://github.com/yourname/contextbuddy"
Issues = "https://github.com/yourname/contextbuddy/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
